my_wordpress/Wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: adi-wordpress-app 
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/adi/wordpress-app:wordpress-latest
        ports:
          - containerPort: 80
        volumeMounts:
        - name: wp-data
          mountPath: /var/www/html
      volumes:
        - name: wp-data
          persistentVolumeClaim:
            claimName: wp-pvc
      imagePullSecrets:
        - name: adi-ecr-secret
