my_wordpress/Wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: adi-wordpress-app 
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: adi-wordpress-app
  rules:
  - host: ad31a4b729a9244eeba7ca68988d0aac-1608470510.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /(grafana|login)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: adi-prometheus-grafana
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
